「診断を作る」まで
feat: enhance navigation and auth UI with improved functionality

- Add Next.js Link components to navbar and sidebar navigation
- Implement styled login/signup form with nickname field support
- Store user nickname in auth metadata during signup
- Replace direct Supabase RPC with Edge Functions for quiz requests
- Update Japanese translations for UI elements (ログイン, サインアップ)
- Disable JWT verification in Edge Functions config for development
- Apply DaisyUI styling to forms and navigation components

This update improves user experience with proper client-side routing,
enhanced authentication flow, and better separation of concerns by
using Edge Functions instead of direct database RPC calls.

--- a/frontennd/supabase/config.toml
+++ b/frontennd/supabase/config.toml
@@ -350,22 +350,22 @@ s3_secret_key = "env(S3_SECRET_KEY)"
 
 [functions.enqueue-quiz-requests]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/enqueue-quiz-requests/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/enqueue-quiz-requests/index.ts"
+entrypoint = "./functions/enqueue-quiz-requests/index.js"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/enqueue-quiz-requests/*.html" ]
 
 [functions.dequeue-quiz-requests]
 enabled = true
-verify_jwt = true
+verify_jwt = false
 import_map = "./functions/dequeue-quiz-requests/deno.json"
 # Uncomment to specify a custom file path to the entrypoint.
 # Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
-entrypoint = "./functions/dequeue-quiz-requests/index.ts"
+entrypoint = "./functions/dequeue-quiz-requests/index.js"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/dequeue-quiz-requests/*.html" ]
